--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <body>
     <!-- STAER OF NAVBAR -->
     <nav class="navbar navbar-expand-sm fixed-top" id="navbar">
-        <div class="container">
+        <div class="container-fluid">
 
             <!-- Brand -->
             <a class="navbar-brand" href="#"><i class="fas fa-gift"></i> Güzul</a>
@@ -35,18 +35,19 @@
             <div class="collapse navbar-collapse justify-content-between" id="collapsibleNavbar">
                 <ul class="navbar-nav mx-auto">
                     <li class="nav-item py-1 mr-2">
-                        <a class="nav-link" href="#home"> Home</a>
+                        <a class="nav-link link1" href="#home"> Home</a>
                     </li>
                     <li class="nav-item py-1 mr-2">
-                        <a class="nav-link text-capitalize" href="#register"> register</a>
+                        <a class="nav-link link1 text-capitalize" href="#register"> register</a>
                     </li>
                     <li class="nav-item py-1 mr-2">
-                        <a class="nav-link text-capitalize" href="#about"> about us</a>
+                        <a class="nav-link link1 text-capitalize" href="#about"> about us</a>
                     </li>
                     <li class="nav-item py-1">
-                        <a class="nav-link text-capitalize" href="#contact"> contact us</a>
+                        <a class="nav-link link1 text-capitalize" href="#contact"> contact us</a>
                     </li>
                 </ul>
+                <!-- navbar links 2 -->
 
                 <ul class="navbar-nav">
                     <li class="nav-item">
@@ -60,7 +61,6 @@
                 </ul>
 
             </div>
-            <!-- navbar links 2 -->
 
         </div>
     </nav>
@@ -73,7 +73,7 @@
                     <div class="container">
                         <div class="content ml-2">
                             <h1 class="h1 font-weight-bolder text-capitalize">welcome to <br> güzul</h1>
-                            <p class="h3 w-75 mt-3 mb-4">See how your users experience your website in realtime or view trends to see any changes in performance over time.</p>
+                            <p class="h5 w-75 mt-3 mb-4">See how your users experience your website in realtime or view trends to see any changes in performance over time.</p>
                             <a href="" class="btn btn-danger">Shop Now</a>
                         </div>
 
@@ -85,7 +85,7 @@
                     <div class="container">
                         <div class="content ml-2 text-center">
                             <h1 class="h1 font-weight-bolder text-capitalize">welcome to <br> güzul</h1>
-                            <p class="h3 w-75 mt-3 mb-4 mx-auto">See how your users experience your website in realtime or view trends to see any changes in performance over time.</p>
+                            <p class="h5 w-75 mt-3 mb-4 mx-auto">See how your users experience your website in realtime or view trends to see any changes in performance over time.</p>
                             <a href="" class="btn btn-danger">Shop Now</a>
                         </div>
 
@@ -97,7 +97,7 @@
                     <div class="container">
                         <div class="content ml-2 text-right">
                             <h1 class="h1 font-weight-bolder text-capitalize">welcome to <br> güzul</h1>
-                            <p class="h3 w-75 mt-3 mb-4 ml-auto">See how your users experience your website in realtime or view trends to see any changes in performance over time.</p>
+                            <p class="h5 w-75 mt-3 mb-4 ml-auto">See how your users experience your website in realtime or view trends to see any changes in performance over time.</p>
                             <a href="" class="btn btn-danger">Shop Now</a>
                         </div>
 
@@ -105,26 +105,67 @@
                 </div>
             </div>
         </div>
-
     </header>
     <!-- START OF SLIDER 1 -->
     <section id="slider1"></section>
 
-    <!-- START OD SLIDER 2 -->
-    <section id="slider2"></section>
+    <!-- START OF products -->
+    <section id="products">
+        <div class="container">
+            <div class="row">
+                <div class="col-sm-3">
+                    <!-- category -->
+                    <div class="bta3 mt-5">
 
-    <!-- START OF BEST SILLER -->
-    <section id="siller"></section>
+                    </div>
+                </div>
+                <div class="col-md-9">
+                    <div class="mt-5">
+                        <!-- Nav pills -->
+                        <ul class="nav nav-pills justify-content-center">
+                            <li class="nav-item">
+                                <a class="nav-link active" data-toggle="pill" href="#home">Home</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" data-toggle="pill" href="#menu1">Menu 1</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" data-toggle="pill" href="#menu2">Menu 2</a>
+                            </li>
+                        </ul>
 
-    <!-- START OF CARD -->
-    <section id="card"></section>
+                        <!-- Tab panes -->
 
-    <!-- START OF CATEGORY -->
-    <section id="category"></section>
+                        <div class="tab-content">
+                            <div class="tab-pane fade show container active" id="home">
+                                <p class="lead">
+                                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem nulla commodi harum tempore ut, laboriosam dolores alias quaerat rerum obcaecati!
+                                </p>
+                            </div>
+                            <div class="tab-pane fade container fade" id="menu1">
+                                <p class="lead text-danger">
+                                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem nulla commodi harum tempore ut, laboriosam dolores alias quaerat rerum obcaecati!
+                                </p>
+                            </div>
+                            <div class="tab-pane fade container fade" id="menu2">
+                                <p class="lead text-info">
+                                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem nulla commodi harum tempore ut, laboriosam dolores alias quaerat rerum obcaecati!
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
 
+            </div>
+        </div>
+
+
+    </section>
 
     <!-- START OD SLIDER 3 -->
-    <section id="slider3"></section>
+    <section id="slider3">
+
+    </section>
 
     <!-- START OF FOOTER-->
     <footer></footer>
