--- a/web-pages/about.html
+++ b/web-pages/about.html
@@ -23,13 +23,14 @@
 <body>
 
     <!-- jquery -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <script src="js/jquery.min.js"></script>
     <!-- owl-charosel -->
     <script src="js/owl.carousel.min.js"></script>
     <!-- popper -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js"></script>
     <!-- bootstrap -->
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js"></script>
+    <script src="js/bootstrap.min.js"></script>
+    <!-- custom js -->
     <script src="js/main.js"></script>
 </body>
 
