--- a/web-pages/about.html
+++ b/web-pages/about.html
@@ -21,6 +21,107 @@
 </head>
 
 <body>
+    <!-- START OF NAVBAR -->
+    <nav class="navbar navbar-expand-sm fixed-top" id="navbar">
+        <div class="container-fluid">
+
+            <!-- Brand -->
+            <a class="navbar-brand" href="#"><i class="fas fa-gift"></i> Güzul</a>
+
+            <!-- Toggler/collapsibe Button -->
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
+                <i class="fas fa-bars "></i>
+             </button>
+
+            <!-- Navbar links -->
+            <div class="collapse navbar-collapse justify-content-between" id="collapsibleNavbar">
+                <ul class="navbar-nav mx-auto">
+                    <li class="nav-item py-1 mr-2">
+                        <a class="nav-link link1" href="#home"> Home</a>
+                    </li>
+                    <li class="nav-item py-1 mr-2">
+                        <a class="nav-link link1 text-capitalize" href="#register"> register</a>
+                    </li>
+                    <li class="nav-item py-1 mr-2">
+                        <a class="nav-link link1 text-capitalize" href="#about"> about us</a>
+                    </li>
+                    <li class="nav-item py-1">
+                        <a class="nav-link link1 text-capitalize" href="#contact"> contact us</a>
+                    </li>
+                </ul>
+                <!-- navbar links 2 -->
+
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a class="nav-link text-capitalize" href="#cart"> <span class="fas fa-shopping-cart py-1 px-2 mr-3"></span></a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link text-capitalize" href="#cart">
+                            <span class="fab fa-gratipay py-1 px-2"></span>
+                        </a>
+                    </li>
+                </ul>
+
+            </div>
+
+        </div>
+    </nav>
+
+    <!-- START OF FOOTER-->
+    <footer>
+        <div class="footer_main py-5">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-4">
+                        <div class="wraper mt-3">
+                            <h4 class="mb-4 mt-3 text-capitalize">About Us</h4>
+                            <p class="mt-2 mb-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis magni hic eius a maxime quam numquam voluptates saepe odit. Necessitatibus.</p>
+                            <div class="icons d-flex">
+                                <div class="icon d-flex justify-content-center align-items-center mr-3">
+                                    <i class="fab fa-facebook-f"></i>
+                                </div>
+                                <div class="icon d-flex justify-content-center align-items-center mr-3">
+                                    <i class="fab fa-instagram"></i>
+                                </div>
+                                <div class="icon d-flex justify-content-center align-items-center mr-3">
+                                    <i class="fas fa-at"></i>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-4">
+                        <div class="wraper mt-3">
+                            <h4 class="text-capitalize">Information</h4>
+                            <ul class="list-group list-group-flush">
+                                <li class="list-group-item">Cras justo odio</li>
+                                <li class="list-group-item">Dapibus ac facilisis in</li>
+                                <li class="list-group-item">Morbi leo risus</li>
+                                <li class="list-group-item">Porta ac consectetur ac</li>
+                                <li class="list-group-item">Vestibulum at eros</li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="col-md-4">
+                        <div class="wraper mt-3">
+                            <h4 class="text-capitalize">contact us</h4>
+                            <ul class="list-group list-group-flush">
+                                <li class="list-group-item"><i class="far fa-map"></i> <span>Address: Michael I. Days 3756 Preston Street Wichita, KS 67213</span></li>
+                                <li class="list-group-item"><i class="fas fa-phone-alt"></i> <span> Phone: +1-888 705 770</span></li>
+                                <li class="list-group-item"><i class="fas fa-at"></i> <span> Email: contactinfo@gmail.com</span></li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="footer_sec py-3">
+            <div class="container">
+                <div class="wraper">
+                    <p class="text-center">All Rights Reserved. ©</p>
+                </div>
+            </div>
+        </div>
+    </footer>
 
     <!-- jquery -->
     <script src="js/jquery.min.js"></script>
