--- a/web-pages/wishlist.html
+++ b/web-pages/wishlist.html
@@ -17,7 +17,7 @@
 
 <body>
     <!-- START OF NAVBAR -->
-    <nav class="navbar navbar-expand-sm fixed-top" id="navbar">
+    <nav class="navbar navbar-expand-sm fixed-top nav-main" id="navbar">
         <div class="container-fluid">
             <!-- Brand -->
             <a class="navbar-brand" href="#"><i class="fas fa-gift"></i> Güzul</a>
@@ -66,8 +66,8 @@
         <p>YOUR WISHLIST</p>
     </header>
 
-    <div class="container mt-3">
-        <table class="table table-hover text-center">
+    <div class="container mt-3 mb-3">
+        <table class="table table-hover text-center wish-table">
             <thead>
                 <th>product</th>
                 <th>Name</th>
@@ -76,9 +76,155 @@
                 <th>Description</th>
                 <th>Remove</th>
             </thead>
-            <tbody id="table"></tbody>
+            <tbody>
+                <tr>
+                    <td class="wish-img">
+                        <img src=" ../Images/home-bg3.webp " alt=" " />
+                    </td>
+                    <td>sport wear</td>
+                    <td>cloths</td>
+                    <td>200</td>
+                    <td>nmnoljionionnio</td>
+                    <td><button class="btn btn-danger">Remove</button></td>
+                </tr>
+                <tr>
+                    <td class="wish-img">
+                        <img src=" ../Images/home-bg3.webp " alt=" " />
+                    </td>
+                    <td>sport wear</td>
+                    <td>cloths</td>
+                    <td>200</td>
+                    <td>nmnoljionionnio</td>
+                    <td><button class="btn btn-danger">Remove</button></td>
+                </tr>
+                <tr>
+                    <td class="wish-img">
+                        <img src=" ../Images/home-bg3.webp " alt=" " />
+                    </td>
+                    <td>sport wear</td>
+                    <td>cloths</td>
+                    <td>200</td>
+                    <td>nmnoljionionnio</td>
+                    <td><button class="btn btn-danger">Remove</button></td>
+                </tr>
+                <tr>
+                    <td class="wish-img">
+                        <img src=" ../Images/home-bg3.webp " alt=" " />
+                    </td>
+                    <td>sport wear</td>
+                    <td>cloths</td>
+                    <td>200</td>
+                    <td>nmnoljionionnio</td>
+                    <td><button class="btn btn-danger">Remove</button></td>
+                </tr>
+                <tr>
+                    <td class="wish-img">
+                        <img src=" ../Images/home-bg3.webp " alt=" " />
+                    </td>
+                    <td>sport wear</td>
+                    <td>cloths</td>
+                    <td>200</td>
+                    <td>nmnoljionionnio</td>
+                    <td><button class="btn btn-danger">Remove</button></td>
+                </tr>
+            </tbody>
         </table>
     </div>
+
+    <!-- START OF FOOTER-->
+    <footer>
+        <div class="footer_main py-5">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-4">
+                        <div class="wraper mt-3">
+                            <h4 class="mb-4 mt-3 text-capitalize">About Us</h4>
+                            <p class="mt-2 mb-4">
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis magni hic eius a maxime quam numquam voluptates saepe odit. Necessitatibus.
+                            </p>
+                            <div class="icons d-flex">
+                                <div class="
+                      icon
+                      d-flex
+                      justify-content-center
+                      align-items-center
+                      mr-3
+                    ">
+                                    <i class="fab fa-facebook-f"></i>
+                                </div>
+                                <div class="
+                      icon
+                      d-flex
+                      justify-content-center
+                      align-items-center
+                      mr-3
+                    ">
+                                    <i class="fab fa-instagram"></i>
+                                </div>
+                                <div class="
+                      icon
+                      d-flex
+                      justify-content-center
+                      align-items-center
+                      mr-3
+                    ">
+                                    <i class="fas fa-at"></i>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-4">
+                        <div class="wraper mt-3">
+                            <h4 class="text-capitalize">Information</h4>
+                            <ul class="list-group list-group-flush">
+                                <li class="list-group-item">Cras justo odio</li>
+                                <li class="list-group-item">Dapibus ac facilisis in</li>
+                                <li class="list-group-item">Morbi leo risus</li>
+                                <li class="list-group-item">Porta ac consectetur ac</li>
+                                <li class="list-group-item">Vestibulum at eros</li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="col-md-4">
+                        <div class="wraper mt-3">
+                            <h4 class="text-capitalize">contact us</h4>
+                            <ul class="list-group list-group-flush">
+                                <li class="list-group-item">
+                                    <i class="far fa-map"></i>
+                                    <span>Address: Michael I. Days 3756 Preston Street Wichita, KS
+                      67213</span
+                    >
+                  </li>
+                  <li class="list-group-item">
+                    <i class="fas fa-phone-alt"></i>
+                    <span> Phone: +1-888 705 770</span>
+                                </li>
+                                <li class="list-group-item">
+                                    <i class="fas fa-at"></i>
+                                    <span> Email: contactinfo@gmail.com</span>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="footer_sec py-3">
+            <div class="container">
+                <div class="wraper">
+                    <p class="text-center">All Rights Reserved. ©</p>
+                </div>
+            </div>
+        </div>
+    </footer>
+    <!-- jquery -->
+    <script src="js/jquery.min.js "></script>
+    <!-- popper -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js "></script>
+    <!-- bootstrap -->
+    <script src="js/bootstrap.min.js "></script>
+    <!-- custom js -->
+    <script src="js/main.js "></script>
 </body>
 
 </html>
