--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <div class="container-fluid">
 
             <!-- Brand -->
-            <a class="navbar-brand" href="#"><i class="fas fa-gift"></i> Güzul</a>
+            <span class="navbar-brand" href="#"><i class="fas fa-gift"></i> Güzul</span>
 
             <!-- Toggler/collapsibe Button -->
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
@@ -68,18 +68,20 @@
     <!-- START OF HEADER -->
     <header id="header">
         <div class="owl-carousel" id="hero-carousel">
+            <!-- page_slider 1 -->
             <div class="homeInit slider1">
                 <div class="overlay d-flex flex-column justify-content-center">
                     <div class="container">
                         <div class="content ml-2 text-md-left text-center">
                             <h1 class="h1 font-weight-bolder text-capitalize">welcome to <br> güzul</h1>
-                            <p class="h5 w-75 mt-3 mb-4">See how your users experience your website in realtime or view trends to see any changes in performance over time.</p>
+                            <p class="h5 mt-3 mb-4">See how your users experience your website in realtime or view trends to see any changes in performance over time.</p>
                             <a href="" class="btn btn-main">Shop Now</a>
                         </div>
 
                     </div>
                 </div>
             </div>
+            <!-- page_slider 2 -->
             <div class="homeInit slider2">
                 <div class="overlay d-flex flex-column justify-content-center align-items-center">
                     <div class="container">
@@ -92,12 +94,13 @@
                     </div>
                 </div>
             </div>
+            <!-- page_slider 3 -->
             <div class="homeInit slider3">
                 <div class="overlay d-flex flex-column justify-content-center">
                     <div class="container">
                         <div class="content ml-2 text-md-right text-center">
                             <h1 class="h1 font-weight-bolder text-capitalize">welcome to <br> güzul</h1>
-                            <p class="h5 w-75 mt-3 mb-4 ml-auto">See how your users experience your website in realtime or view trends to see any changes in performance over time.</p>
+                            <p class="h5 mt-3 mb-4 text-md-right text-center">See how your users experience your website in realtime or view trends to see any changes in performance over time.</p>
                             <a href="" class="btn btn-main">Shop Now</a>
                         </div>
 
@@ -171,7 +174,7 @@
                             <!-- Accordion item 3 -->
                             <div class="card">
                                 <div id="headingThree" class="card-header  bg-white  shadow-sm border-0">
-                                    <h6 class="mb-0 font-weight-bold"><a href="#" data-toggle="collapse" data-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree" class="d-block position-relative collapsed   text-uppercase collapsible-link py-2">guns</a></h6>
+                                    <h6 class="mb-0 font-weight-bold"><a href="#" data-toggle="collapse" data-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree" class="d-block position-relative collapsed text-uppercase collapsible-link py-2">Toys</a></h6>
                                 </div>
                                 <div id="collapseThree" aria-labelledby="headingThree" data-parent="#accordionExample" class="collapse">
                                     <div class="card-body p-3">
@@ -276,8 +279,12 @@
                 <div class="row">
                     <div class="col-md-4">
                         <div class="wraper mt-3">
-                            <h4 class="mb-4 mt-3 text-capitalize">About Us</h4>
-                            <p class="mt-2 mb-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis magni hic eius a maxime quam numquam voluptates saepe odit. Necessitatibus.</p>
+                            <h4 class="mb-4 mt-3 text-capitalize  position-relative">About Us</h4>
+                            <ul class="list-group list-group-flush">
+                                <li class="list-group-item">
+                                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus itaque, enim iste adipisci cupiditate obcaecati rem voluptates modi dolores. Nemo?</p>
+                                </li>
+                            </ul>
                             <div class="icons d-flex">
                                 <div class="icon d-flex justify-content-center align-items-center mr-3">
                                     <i class="fab fa-facebook-f"></i>
@@ -293,7 +300,7 @@
                     </div>
                     <div class="col-md-4">
                         <div class="wraper mt-3">
-                            <h4 class="text-capitalize">Information</h4>
+                            <h4 class="text-capitalize position-relative">Information</h4>
                             <ul class="list-group list-group-flush">
                                 <li class="list-group-item">Cras justo odio</li>
                                 <li class="list-group-item">Dapibus ac facilisis in</li>
@@ -305,7 +312,7 @@
                     </div>
                     <div class="col-md-4">
                         <div class="wraper mt-3">
-                            <h4 class="text-capitalize">contact us</h4>
+                            <h4 class="text-capitalize position-relative">contact us</h4>
                             <ul class="list-group list-group-flush">
                                 <li class="list-group-item"><i class="far fa-map"></i> <span>Address: Michael I. Days 3756 Preston Street Wichita, KS 67213</span></li>
                                 <li class="list-group-item"><i class="fas fa-phone-alt"></i> <span> Phone: +1-888 705 770</span></li>
