--- a/web-pages/register.html
+++ b/web-pages/register.html
@@ -66,43 +66,57 @@
     </div>
 </nav>
 <!-- some stuff -->
-<header class="vh-50 bg-info"></header>
-<!-- start of form -->
-<section class="p-2 my-4">
+<header id="post" class="">
     <div class="container">
-        <form class="row">
-            <div class="col-md-5">
-                <label for="inputEmail4" class="form-label">Name</label>
-                <input type="email" class="form-control" id="inputEmail4">
+        <div class="overlay"></div>
+    </div>
+</header>
+<!-- start of form -->
+<section class="my-4 p-1">
+    <div class="container">
+        <div class="row">
+            <div class="col-md-8 m-auto">
+                <div class="card shadow-lg border-2">
+                    <form class="mt-4 p-3">
+                        <div class="form-group">
+                            <label for="formGroupExampleInput">Full Name *</label>
+                            <div class="form-row">
+                                <div class="col">
+                                    <input type="text" class="form-control" placeholder="First name">
+                                </div>
+                                <div class="col">
+                                    <input type="text" class="form-control" placeholder="Last name">
+                                </div>
+                            </div>
+                            <label for="formGroupExampleInput" class="mt-3">Address *</label>
+                            <div class="form-row">
+                                <div class="col">
+                                    <input type="text" class="form-control" placeholder="Area">
+                                </div>
+                                <div class="col">
+                                    <input type="text" class="form-control" placeholder="Street Name">
+                                </div>
+                            </div>
+                            <label for="exampleFormControlTextarea1" class="mt-3">Address Details *</label>
+                            <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+                            <div class="form-row mt-3">
+                                <div class="form-group col-md-6">
+                                    <label for="inputEmail4">Email *</label>
+                                    <input type="email" class="form-control" placeholder="Enter Your Email" id="inputEmail4">
+                                </div>
+                                <div class="form-group col-md-6">
+                                    <label for="inputPassword4">Password *</label>
+                                    <input type="password" class="form-control" placeholder="Enter Your Password" id="inputPassword4">
+                                </div>
+                                <button class="btn btn-main m-auto " type="submit">Submit</button>
+                            </div>
+                        </div>
+                    </form>
+                </div>
             </div>
-            <div class="col-md-5">
-                <label for="inputPassword4" class="form-label">Mobile phone</label>
-                <input type="password" class="form-control" id="inputPassword4">
-            </div>
-            <div class="col-md-5">
-                <label for="inputEmail4" class="form-label">Email</label>
-                <input type="email" class="form-control" id="inputEmail4">
-            </div>
-            <div class="col-md-5">
-                <label for="inputPassword4" class="form-label">Password</label>
-                <input type="password" class="form-control" id="inputPassword4">
-            </div>
-            <div class="col-md-10">
-                <label for="inputAddress" class="form-label">Address</label>
-                <input type="text" class="form-control" id="inputAddress" placeholder="Street num">
-            </div>
-            <div class="col-6">
-                <label for="inputAddress2" class="form-label">Address 2</label>
-                <input type="text" class="form-control" id="inputAddress2" placeholder="Apartment, studio, or floor">
-            </div>
-            <div class="col-md-4">
-                <label for="inputCity" class="form-label">City</label>
-                <input type="text" class="form-control" id="inputCity">
-            </div>
-            <div class="col-8">
-                <button type="submit" class="btn btn-primary mt-3">Login</button>
-            </div>
-        </form>
+        </div>
+    </div>
+    </div>
     </div>
 </section>
 
