final css works

--- a/web-pages/register.html
+++ b/web-pages/register.html
@@ -172,6 +172,7 @@
 <!-- bootstrap -->
 <script src="../js/bootstrap.min.js "></script>
 <!-- custom js -->
+<script src="../js/main.js"></script>
 </body>
 
 </html>
