--- a/web-pages/contact.html
+++ b/web-pages/contact.html
@@ -223,15 +223,13 @@
         </div>
     </footer>
     <!-- jquery -->
-    <script src="js/jquery.min.js"></script>
-    <!-- owl-charosel -->
-    <script src="js/owl.carousel.min.js"></script>
+    <script src="../js/jquery.min.js"></script>
     <!-- popper -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js"></script>
     <!-- bootstrap -->
-    <script src="js/bootstrap.min.js"></script>
+    <script src="../js/bootstrap.min.js"></script>
     <!-- custom js -->
-    <script src="js/main.js"></script>
+    <script src="../js/main.js"></script>
 </body>
 
 </html>
